argocd/base/patch-remove-dex.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-dex-server
$patch: delete
